--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/aos.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
+	  <script src="js/jquery-3.4.1.min.js"></script>
+      <script src="js/aos.js"></script>
+      <script src="js/custom.js"></script>	
+	  <script src="js/voca.js"></script>	
+	  <script src="js/voca.min.js"></script>	
+	  <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+
    </head>
 	<body>	
 		<header class="header">     
@@ -122,9 +129,50 @@
    			</div>
 	   	</div>
 	   </section>
+		
+	   <script>
+		 jQuery(document).ready(function() {  
 			
-      <script src="js/jquery-3.4.1.min.js"></script>
-      <script src="js/aos.js"></script>
-      <script src="js/custom.js"></script>		
+			$('#lower').on('click',function() {				
+			var x = document.getElementById("content").value;
+			console.log(v.upperCase(x));
+			document.getElementById("content").value= v.lowerCase(x);				
+			});
+
+			$('#upper').on('click',function() {				
+			var x = document.getElementById("content").value;
+			console.log(v.upperCase(x));
+			document.getElementById("content").value= v.upperCase(x);				
+			});
+
+			$('#capitalized').on('click',function() {				
+			var x = document.getElementById("content").value;
+			console.log(v.upperCase(x));
+			document.getElementById("content").value= v.capitalize(x);				
+			});
+
+			$('#title').on('click',function() {				
+			var x = document.getElementById("content").value;
+			console.log(v.upperCase(x));
+			document.getElementById("content").value= v.titleCase(x);				
+			});
+			
+			
+
+
+
+
+
+
+
+
+			});
+
+
+
+
+
+	   </script>
+    	
 	</body>
 </html>
