--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 	   					<!-- <button id="alternating" class="btn circle-effect">aLtErNaTiNg cAsE</button>  -->
 	   					<button id="title" class="btn circle-effect">Title Case</button> 
 	   					<button id="inverse" class="btn circle-effect">InVeRsE CaSe</button> 
-	   					<!-- <button id="download" class="btn circle-effect" data-download-target="#content" style="display: inline-block;">Download Text</button> 
-	   					<button id="copy" class="btn circle-effect" data-clipboard-target="#content">Copy to Clipboard</button>  -->
+	   					<button id="download" class="btn circle-effect" data-download-target="#content" style="display: inline-block;"><a href="#">Download Text</a></button> 
+	   					<!-- <button id="copy" class="btn circle-effect" data-clipboard-target="#content">Copy to Clipboard</button>  -->
 	   					<button id="clear" class="btn circle-effect">Clear</button> 
 	   					<div class="buy-me-coffee"><a href="javascript:void(0);" class="theme-btn circle-effect">Buy me a Coffee</a></div>
 	   				</div>
@@ -133,7 +133,7 @@
 				var array_1= x.split(". ");
 			
 				for (let i =0; i<array_1.length; i++) {						
-					array_1[i] = array_1[i].charAt(0).toUpperCase() + array_1[i].slice(1);		
+					array_1[i] = array_1[i].charAt(0).toUpperCase() + array_1[i].slice(1).toLowerCase();		
 					console.log(x[i]);				
 				}
 				var y=array_1.join(". "); 
@@ -185,6 +185,20 @@
 			console.log(v.upperCase(x));
 			document.getElementById("content").value= "";				
 			});
+
+			$('#download').on('click',function() {				
+				var fileName = "text.txt";
+				var fileContent = document.getElementById("content").value;
+				var myFile = new Blob([fileContent], {type: 'text/plain'});
+
+				window.URL = window.URL || window.webkitURL;
+				var dlBtn = document.getElementById("download");
+
+				dlBtn.setAttribute("href", window.URL.createObjectURL(myFile));
+				dlBtn.setAttribute("download", fileName);			
+			});
+
+
 			});
 	   </script>
 	</body>
